--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,6 +28,7 @@
   .main {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2rem;
     max-width: 95%;
     padding: 2em 1.5em;
   }
